Moved Pi tests to org.pcj.tests.pi package.